--- a/style.css
+++ b/style.css
@@ -1,25 +1,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
+     
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: "Poppins", sans-serif;
-
 }
 
+
+    .setter{
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        position: relative;
+        top: 50%; 
+        transform: translateY(-50%);
+    }
+
+.conS{
+    color: white;
+    position: absolute;
+    margin-top: -300px;
+    margin-left: 500px;
+}
+
+.logoutlink{
+    font-size: 30px;
+    color: white;
+}
+#title{
+        position: relative;
+        margin-left: -300px;
+        text-align: center-left;
+        color: white;
+        font-size: 50px;
+        height: 90vh;
+}
+
+#logo{
+    position: relative;
+    text-align: center;
+    height: 160px;
+    width: 160px;
+    margin-top: -450px;
+    margin-right: -300px;
+
+
+}
+      
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('secondimg2.jpg') no-repeat;
+    background: url('bck.jpg') repeat-y;
     background-size: cover;
     background-position: center;
 }
 
 
 .wrapper{
+    margin-top: 0px;
+    position: absolute;
     width:420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -30,6 +73,23 @@ body{
     padding: 30px 40px;
 
 }
+.searchForm{
+    max-height: 50px;
+}
+.wrapper2{
+    display:block;
+    position: fixed;
+    justify-content: normal;
+    width:100%;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
 
 .wrapper h1 {
     font-size: 36px;
@@ -48,7 +108,6 @@ body{
     width: 100%;
     height: 100%;
     background: transparent;
-    border: none;
     outline: none;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
@@ -56,11 +115,26 @@ body{
     color: #fff;
     padding: 20px 45px 20px 20px;
 }
-
+.input-box2 input{
+    width: 150px;
+    height: 1px;
+    background: transparent;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 20px 20px 20px;
+}
 
 .input-box input::placeholder{
     color:#fff;
 }
+.input-box2 input::placeholder{
+    color:#fff;
+}
+
+
 
 .input-box i {
     position: absolute;
@@ -69,6 +143,7 @@ body{
     transform: translateY(-50%);
     font-size: 20px;
 }
+
 
 
 .wrapper .remember-forgot {
@@ -129,3 +204,18 @@ body{
 
 
 
+.backbutton {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: inline-block;
+    background-color: goldenrod;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+.backbutton:hover{
+    text-decoration: none;
+}
